<resources>
    <string name="app_name">Pokedex</string>

    <string name="done">done</string>
    <string name="boton_add">+</string>
    <string name="casilla_nombre">Nombre</string>

    <string name="barraHerramientas_ajustes">Ajustes</string>
    <string name="barraHerramientas_back">Back</string>
    <string name="barraHerramientas_home">Home</string>

    <string name="ajustes_tituloVentana">Ajustes</string>
    <string name="ajustes_modoOscuro">Modo oscuro:</string>

    <string name="main_tituloVentana">Inicio</string>

    <string name="ruta_tituloVentana">Rutas</string>
    <string name="ruta_pokedex">Pokedex</string>
    <string name="ruta_casillaTotalEntrenadores">Entrenadores</string>

    <string name="zona_tituloVentana">Zonas</string>
    <string name="zona_numEntrenadores">Entrenadores derrotados: 0/0</string>

    <string name="ubicacion_tituloVentana">Ubicación</string>

    <string name="pokemons_tituloVentana">Pokemons</string>
    <string name="pokemons_probabilidad">%</string>

    <string name="pokedex_tituloVentana">Pokedex</string>
    <string name="pokedex_capturado">Capturado</string>
    <string name="pokedex_busqueda">Buscar pokemon</string>


    <string name="listaJuegos_tituloVentana">Juegos</string>
    <string name="listaJuegos_todo"><b>CONSULTA:</b></string>
    <string name="listaJuegos_botonConsultarJuegos">Consultar juegos</string>

    <string name="visualizarJuego_tituloVentana">Juego</string>
    <string name="visualizarJuego_nombres">NOMBRES:</string>
    <string name="visualizarJuego_minPersonas">MIN PERSONAS:</string>
    <string name="visualizarJuego_maxPersonas">MAX PERSONAS:</string>
    <string name="visualizarJuego_numEquipos">NUM EQUIPOS:</string>
    <string name="visualizarJuego_edadRecomendada">EDAD RECOMENDADA:</string>
    <string name="visualizarJuego_descripcion">DESCRIPCIÓN:</string>


</resources>