<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Zona">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_barraHerramientas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/barraHerramientas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/bt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/barraHerramientas_back"
                android:minHeight="48dp"
                android:onClick="onclick_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/tv_tituloBarra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zona_tituloVentana"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/bt_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/barraHerramientas_home"
                android:minHeight="48dp"
                android:onClick="onclick_irAInicio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home"
                app:tint="?attr/colorOnPrimary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/lista_rutas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_entrenadoresRestantes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_barraHerramientas" />

    <EditText
        android:id="@+id/et_nombrePokemon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/casilla_nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_add"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onclick_addZona"
        android:text="@string/boton_add"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_entrenadoresRestantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/zona_numEntrenadores"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_add"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/bt_disminuirEntrenadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:onClick="onclick_disminuirEntrenadores"
        app:layout_constraintBottom_toTopOf="@+id/bt_add"
        app:layout_constraintStart_toEndOf="@+id/tv_entrenadoresRestantes"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/bt_aumentarEntrenadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:onClick="onclick_aumentarEntrenadores"
        app:layout_constraintBottom_toTopOf="@+id/bt_add"
        app:layout_constraintStart_toEndOf="@+id/bt_disminuirEntrenadores"
        app:srcCompat="@android:drawable/arrow_up_float" />

</androidx.constraintlayout.widget.ConstraintLayout>