<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pokedex.Ajustes">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_barraHerramientas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/barraHerramientas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/bt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/barraHerramientas_back"
                android:minHeight="48dp"
                android:onClick="onclick_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/tv_tituloBarra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajustes_tituloVentana"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/bt_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/barraHerramientas_home"
                android:minHeight="48dp"
                android:onClick="onclick_irAInicio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home"
                app:tint="?attr/colorOnPrimary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <Switch
        android:id="@+id/switch_modoOscuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:onClick="onclick_switchModoOscuro"
        android:text="@string/ajustes_modoOscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_barraHerramientas" />

</androidx.constraintlayout.widget.ConstraintLayout>